--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8"
+  name='viewport' 
+  content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' >
+
   <title>LalistaNg</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
