Maquetacion lista, botones y texto

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"
+  <meta charset="utf-8">
+  <!--
   name='viewport' 
-  content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' >
+  content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' -->
 
   <title>LalistaNg</title>
   <base href="/">
@@ -12,6 +13,6 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root style="display: block; height:100%"></app-root>
 </body>
 </html>
